added matt and i project

--- a/public/pubs/index.html
+++ b/public/pubs/index.html
@@ -35,7 +35,7 @@
 <meta name="twitter:image" content="https://tvanzyl.github.io/images/site-feature-image.png"/>
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Journal Articles 2020  Surrogate Assisted Methods for the Parameterisation of Agent-Based Models"/>
+<meta name="twitter:description" content="Journal Articles 2020  Applications of Machine Learning to Estimating the Sizes and Market Impact of Hidden Orders in the BRICS Financial Markets"/>
 
 </head>
 <body><div class="sidebar animated fadeInDown">
@@ -148,9 +148,9 @@
 <h4 id="2020">2020</h4>
 <blockquote>
 <p >
-<span class="papertitle"><strong>Surrogate Assisted Methods for the Parameterisation of Agent-Based Models</strong></span><br />
-<span class="paperauthors">R. Perumal and T.L. van Zyl</span><br />
-<span class="paperjournal"><em>arXiv preprint arXiv:2008.11835, Jan-Dec. 2020</em></span>
+<span class="papertitle"><strong>Applications of Machine Learning to Estimating the Sizes and Market Impact of Hidden Orders in the BRICS Financial Markets</strong></span><br />
+<span class="paperauthors">W. Maake and T. Van Zyl</span><br />
+<span class="paperjournal"><em>Journal of Advanced Studies in Finance, vol. 11, no. 1(21), pp. 28--64, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
 </p>
@@ -273,7 +273,7 @@
 <blockquote>
 <p >
 <span class="papertitle"><strong>Earth observation sensor web: An overview</strong></span><br />
-<span class="paperauthors">L. Di, K. Moe, and T. van Zyl</span><br />
+<span class="paperauthors">L. Di, K. Moe, and T.L. van Zyl</span><br />
 <span class="paperjournal"><em>IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, vol. 3, no. 4, pp. 415--417, Jan-Dec. 2010</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
@@ -313,7 +313,7 @@
 <blockquote>
 <p >
 <span class="papertitle"><strong>The sensor web: systems of sensor systems</strong></span><br />
-<span class="paperauthors">T. van Zyl, I. Simonis, and G. McFerren</span><br />
+<span class="paperauthors">T.v. Zyl, I. Simonis, and G. McFerren</span><br />
 <span class="paperjournal"><em>International Journal of Digital Earth, vol. 2, no. 1, pp. 16--30, Jan-Dec. 2009</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
@@ -409,6 +409,19 @@
 <span class="papertitle"><strong>Unique Faces Recognition in Videos</strong></span><br />
 <span class="paperauthors">J. Huo and T.L. van Zyl</span><br />
 <span class="paperjournal"><em>2020 IEEE 23rd International Conference on Information Fusion (FUSION), Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Surrogate Assisted Methods for the Parameterisation of Agent-Based Models</strong></span><br />
+<span class="paperauthors">R. Perumal and T.L. van Zyl</span><br />
+<span class="paperjournal"><em>arXiv preprint arXiv:2008.11835, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
 </p>
