--- a/projects/data_driven_surrogate/index.html
+++ b/projects/data_driven_surrogate/index.html
@@ -82,7 +82,7 @@
         
     </ul>
     <div class="footer">
-        <div class="by_farbox">&copy; Terence L. van Zyl 2020 </div>
+        <div class="by_farbox">&copy; Terence L. van Zyl 2021 </div>
     </div>
 </div>
 <div class="main">
@@ -144,7 +144,7 @@
                 
             </div>
 
-            <p>An interesting application arises at the intersection of evolutionary computing and machine learning when attempts are made to capitalise on the strengths of both of these paradigms simultaneously.</p>
+            <p>Interesting applications arises at the intersection of evolutionary computing and machine learning when we capitalise on the strengths of both of these paradigms simultaneously.</p>
 <p>Computational Intelligence, specifically evolutionary computing, has shown substantive utility in the optimisation of complex non-linear systems with numerous positive and negative feedback loops. These non-linear systems are often difficult to optimise directly or generically and often entail long-running simulations to evaluate even with known parameters.</p>
 <p>Recent advances in machine learning, especially deep learning, have demonstrated both analytically and empirically that these models are universal approximators capable of modelling even chaotic systems given sufficient data.</p>
 <p>An interesting application arises at the intersection of evolutionary computing and machine learning when attempts are made to capitalise on the strengths of both of these paradigms simultaneously. In this new solution space to the above mentioned non-linear complex systems requiring optimisation, machine learning is introduced as a surrogate for the long-running simulations. These surrogates allow for several performance enhancements to the current metaheuristic optimisation frameworks.</p>
