--- a/pubs/index.html
+++ b/pubs/index.html
@@ -82,7 +82,7 @@
         
     </ul>
     <div class="footer">
-        <div class="by_farbox">&copy; Terence L. van Zyl 2020 </div>
+        <div class="by_farbox">&copy; Terence L. van Zyl 2021 </div>
     </div>
 </div>
 <div class="main">
@@ -163,7 +163,7 @@
 <p >
 <span class="papertitle"><strong>A framework for online investment decisions</strong></span><br />
 <span class="paperauthors">A.B. Paskaramoorthy, T.J. Gebbie, and T.L. van Zyl</span><br />
-<span class="paperjournal"><em>Investment Analysts Journal, pp. 1--17, Jan-Dec. 2020</em></span>
+<span class="paperjournal"><em>Investment Analysts Journal, vol. 49, no. 3, pp. 215--231, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
 </p>
@@ -421,7 +421,7 @@
 <p >
 <span class="papertitle"><strong>Surrogate Assisted Methods for the Parameterisation of Agent-Based Models</strong></span><br />
 <span class="paperauthors">R. Perumal and T.L. van Zyl</span><br />
-<span class="paperjournal"><em>arXiv preprint arXiv:2008.11835, Jan-Dec. 2020</em></span>
+<span class="paperjournal"><em>2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
 </p>
@@ -445,7 +445,7 @@
 </blockquote>
 <blockquote>
 <p >
-<span class="papertitle"><strong>A rules-based and Transfer Learning approach for deriving the Hubble type of a galaxy from the Galaxy Zoo data</strong></span><br />
+<span class="papertitle"><strong>A rules-based and transfer learning approach for deriving the hubble type of a galaxy from the galaxy zoo data</strong></span><br />
 <span class="paperauthors">M. Variawa, T. van Zyl, and M. Woolway</span><br />
 <span class="paperjournal"><em>1--7, 2020 IEEE 23rd International Conference on Information Fusion (FUSION), IEEE, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
@@ -497,7 +497,7 @@
 </blockquote>
 <blockquote>
 <p >
-<span class="papertitle"><strong>Data-Driven Evolutionary Optimisation for the design parameters of a Chemical Process: A Case Study</strong></span><br />
+<span class="papertitle"><strong>Data-driven evolutionary optimisation for the design parameters of a chemical process: A case study</strong></span><br />
 <span class="paperauthors">L. Stander, M. Woolway, and T. van Zyl</span><br />
 <span class="paperjournal"><em>1--8, 2020 IEEE 23rd International Conference on Information Fusion (FUSION), IEEE, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
@@ -513,6 +513,97 @@
 <span class="papertitle"><strong>Deep Similarity Learning for Soccer Team Ranking</strong></span><br />
 <span class="paperauthors">H. Manack and T.L. Van Zyl</span><br />
 <span class="paperjournal"><em>1--7, 2020 IEEE 23rd International Conference on Information Fusion (FUSION), IEEE, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>DRICORN-K: A Dynamic RIsk CORrelation-driven Non-parametric Algorithm for Online Portfolio Selection</strong></span><br />
+<span class="paperauthors">S. Sooklal, T.L. van Zyl, and A. Paskaramoorthy</span><br />
+<span class="paperjournal"><em>183--196, Southern African Conference for Artificial Intelligence Research, Springer, Cham, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Comparing Generalisation Using Crowd-Sourced vs Expert Labels for Galaxies Classification</strong></span><br />
+<span class="paperauthors">M. Variawa, T. van Zyl, and M. Woolway</span><br />
+<span class="paperjournal"><em>158--162, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Makespan Minimisation for Multipurpose Batch Plants Using Metaheuristic Approaches</strong></span><br />
+<span class="paperauthors">T. van Zyl and M. Woolway</span><br />
+<span class="paperjournal"><em>56--60, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Automated Identification of Individuals in Wildlife Population Using Siamese Neural Networks</strong></span><br />
+<span class="paperauthors">N. Dlamini and T.L. van Zyl</span><br />
+<span class="paperjournal"><em>224--228, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Comparative Analysis of Catastrophic Forgetting in Metric Learning</strong></span><br />
+<span class="paperauthors">J. Huo and T.L. van Zyl</span><br />
+<span class="paperjournal"><em>68--72, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Extended Surrogate Assisted Continuous Process Optimisation</strong></span><br />
+<span class="paperauthors">L. Stander, M. Woolway, and T. van Zyl</span><br />
+<span class="paperjournal"><em>275--279, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Prediction Interval Construction for Multivariate Point Forecasts Using Deep Learning</strong></span><br />
+<span class="paperauthors">T. Mathonsi and T.L. van Zyl</span><br />
+<span class="paperjournal"><em>88--95, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
 </p>
