--- a/public/projects/surrogate_abm/index.html
+++ b/public/projects/surrogate_abm/index.html
@@ -144,7 +144,16 @@
                 
             </div>
 
-            <p>This research project looks at the surrogate assisted agent based modelling of COVID-19.</p>
+            <p>Agent-Based Models (ABMs) as complex adaptive simulations which are able to incorporate real world nuance into their design. This research looks at the surrogate (machine learning) assisted agent based modelling.</p>
+<h4 id="surrogate-assisted-meta-heuristic-optimisation-for-complex-simulation-model">Surrogate Assisted Meta-Heuristic Optimisation for Complex Simulation Model</h4>
+<p>Agent-Based Models (ABMs) are complex adaptive simulations that can incorporate real-world nuance into their design. However, this increase in flexibility results in many parameters that need to be optimised when using such simulations. The time required to accurately parameterise ABMs make them infeasible primarily to implement in practice. Machine Learning techniques can be used to generate Surrogate Models, which serve as function approximators for these simulations. Surrogate assisted optimisation approaches are used to address the parameterisation challenges in ABMs.  The research shows that surrogate assisted optimisation of complex adaptive simulations is at the forefront of solving computationally expensive high dimensional real-world problems.</p>
+<ul>
+<li>Using Particle Swarm Optimisations and Surrogates for Modelling Pandemics such as COVID-19 for balancing the trade-off between exploration and  exploitation.</li>
+<li>Application of Surrogate Assisted Meta-Heuristic Optimisation Strategies in Agent-Based Models for investigating how our strategies extend to other complex simulation models such as <em>Growing Artificial Societies</em>, <em>COVID-19</em>, <em>Opinion Spread</em>.</li>
+</ul>
+<h4 id="forecasting-and-anomaly-detection">Forecasting and Anomaly Detection</h4>
+<p>Discrete-Event Process Simulation models a system&rsquo;s functionality as a sequence of discrete events in time. Events occur at particular instances in time, and they mark changes of states in the system. The system is assumed to remain unchanged between consecutive events, and the simulation can jump directly between events. These simulations are especially prevalent in industry contexts such as process scheduling, logistics, finance, networking and hospitality. We can use these simulation models for forecasting, scenario planning and anomaly detection. For anomaly detection, a forecast is created by running several stochastic variations of the simulation, producing a distribution over possible future outcomes. If the observed results are significantly different from those forecasts, one can flag the observations as possible anomalies.
+We can use surrogates as function approximators for a discrete-event process. Surrogates are less accurate than the original simulation; however, they provide speed-up and better capture the prediction intervals. Balancing the trade-off between the loss in accuracy and speed up in time is imperative to large scale industrial systems. We are exploring a Discrete Event Simulation Frameworks for Modelling Industrial and Business Processes. For example, Financial Risk associated with defaulting on loans and optimising the scheduling and logistics of a distributed cloud computing infrastructure.</p>
 <h2 id="collaborators">Collaborators</h2>
 <ul>
 <li>Rylan Perumal, University of the Witwatersrand</li>
