--- a/pubs/index.html
+++ b/pubs/index.html
@@ -35,7 +35,7 @@
 <meta name="twitter:image" content="https://tvanzyl.github.io/images/site-feature-image.png"/>
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="Journal Articles 2020  Applications of Machine Learning to Estimating the Sizes and Market Impact of Hidden Orders in the BRICS Financial Markets"/>
+<meta name="twitter:description" content="Journal Articles 2021  Determining Real-Time Patterns of Lightning Strikes from Sensor Observations"/>
 
 </head>
 <body><div class="sidebar animated fadeInDown">
@@ -145,6 +145,20 @@
             </div>
 
             <h2 id="journal-articles">Journal Articles</h2>
+<h4 id="2021">2021</h4>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Determining Real-Time Patterns of Lightning Strikes from Sensor Observations</strong></span><br />
+<span class="paperauthors">B.H. Sibolla, T. Van Zyl, and S. Coetzee</span><br />
+<span class="paperjournal"><em>Journal of Geovisualization and Spatial Analysis, vol. 5, no. 1, pp. 1--18, Jan-Dec. 2021</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
 <h4 id="2020">2020</h4>
 <blockquote>
 <p >
@@ -164,6 +178,19 @@
 <span class="papertitle"><strong>A framework for online investment decisions</strong></span><br />
 <span class="paperauthors">A.B. Paskaramoorthy, T.J. Gebbie, and T.L. van Zyl</span><br />
 <span class="paperjournal"><em>Investment Analysts Journal, vol. 49, no. 3, pp. 215--231, Jan-Dec. 2020</em></span>
+<span ><a href=""></a></span><br />
+<span ><a href=""></a></span>
+</p>
+
+
+
+
+</blockquote>
+<blockquote>
+<p >
+<span class="papertitle"><strong>Automated Music Recommendations Using Similarity Learning</strong></span><br />
+<span class="paperauthors">J. Burns and T.L. van Zyl</span><br />
+<span class="paperjournal"><em>SACAIR 2020, pp. 288, Jan-Dec. 2020</em></span>
 <span ><a href=""></a></span><br />
 <span ><a href=""></a></span>
 </p>
@@ -599,23 +626,10 @@
 
 
 </blockquote>
-<blockquote>
-<p >
-<span class="papertitle"><strong>Prediction Interval Construction for Multivariate Point Forecasts Using Deep Learning</strong></span><br />
-<span class="paperauthors">T. Mathonsi and T.L. van Zyl</span><br />
-<span class="paperjournal"><em>88--95, 2020 7th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2020</em></span>
-<span ><a href=""></a></span><br />
-<span ><a href=""></a></span>
-</p>
-
-
-
-
-</blockquote>
 <h4 id="2019">2019</h4>
 <blockquote>
 <p >
-<span class="papertitle"><strong>Comparative Metaheuristic Performance for the Scheduling of Multipurpose Batch Plants</strong></span><br />
+<span class="papertitle"><strong>Comparative metaheuristic performance for the scheduling of multipurpose batch plants</strong></span><br />
 <span class="paperauthors">Z. Bowditch, M. Woolway, and T. van Zyl</span><br />
 <span class="paperjournal"><em>121--125, 2019 6th International Conference on Soft Computing &amp; Machine Intelligence (ISCMI), IEEE, Jan-Dec. 2019</em></span>
 <span ><a href=""></a></span><br />
@@ -654,7 +668,7 @@
 </blockquote>
 <blockquote>
 <p >
-<span class="papertitle"><strong>A Systematic Review on Big Data Analytics Frameworks for Higher Education-Tools and Algorithms</strong></span><br />
+<span class="papertitle"><strong>A systematic review on big data analytics frameworks for higher education-tools and algorithms</strong></span><br />
 <span class="paperauthors">D. Otoo-Arthur and T. Van Zyl</span><br />
 <span class="paperjournal"><em>1--9, Proceedings of the 2019 2nd International Conference on E-Business, Information Management and Computer Science, Jan-Dec. 2019</em></span>
 <span ><a href=""></a></span><br />
@@ -710,7 +724,7 @@
 <h4 id="2009-1">2009</h4>
 <blockquote>
 <p >
-<span class="papertitle"><strong>Using sensorml to describe scientific workflows in distributed Web Service environments</strong></span><br />
+<span class="papertitle"><strong>Using SensorML to describe scientific workflows in distributed Web Service environments</strong></span><br />
 <span class="paperauthors">T. Van Zyl and A. Vahed</span><br />
 <span class="paperjournal"><em>V--375, 2009 IEEE International Geoscience and Remote Sensing Symposium, IEEE, Jan-Dec. 2009</em></span>
 <span ><a href=""></a></span><br />
