--- a/public/about/index.html
+++ b/public/about/index.html
@@ -192,7 +192,7 @@
 
     ,
         "url" : "https:\/\/tvanzyl.github.io\/about\/",
-        "wordCount" : "346",
+        "wordCount" : "301",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -431,51 +431,57 @@
     
     <div class="post__content">
       <h1></h1>
-      <p>Trained as a Computer Scientist in Artificial Intelligence and Complex Adaptive Systems.</p>
-<p>Working as the <a href="https://www.nedbank.co.za/">Nedbank</a> research chair at the <a href="https://www.uj.ac.za/">University of Johannesburg</a>. Research interests include complex adaptive systems, data science, machine learning, and meta-heuristic optimisation for data-driven engineering, industrial and business optimisation and automation.</p>
+      <p>Studied as a Computer Scientist in Artificial Intelligence and Complex Adaptive Systems. Working as a Professor in Machine Learning at the <a href="https://www.uj.ac.za/">University of Johannesburg</a>. Currently, hold the <a href="https://www.nedbank.co.za/">Nedbank</a> research and innovation chair.</p>
+<hr>
 <h3 id="education">Education</h3>
-<p><code>PhD in Computer Science, (University of Johannesburg, 2010)</code></p>
-<ul>
-<li><strong>Using self-adaptive components to realise agent Ontogenesis.</strong></li>
-</ul>
-<p><code>MSc in Computer Science, (Cum Laude) (University of Johannesburg, 2005)</code></p>
-<ul>
-<li><strong>Integration of secure resource negotiating agents into a Telemanufacturing environment.</strong></li>
-</ul>
-<p><code>BSc Honours in Computer Science (Cum Laude), (Rand Afrikaans University, 2002)</code></p>
-<ul>
-<li><strong>Artificial Intelligence - Optimisation - Functional Programming - Robotics - Networking - Graphics - Parallel Programming - Ethical, Audit &amp; Legal</strong></li>
-</ul>
-<p><code>BSc in Information Technology, (Rand Afrikaans University, 2001)</code></p>
-<ul>
-<li><strong>Computer Science - Informatics</strong></li>
-</ul>
+<p><em>2006 - 2010</em></p>
+<blockquote>
+<p><strong>PhD in Computer Science</strong><br>
+University of Johannesburg</p>
+</blockquote>
+<p><em>2003 - 2005</em></p>
+<blockquote>
+<p><strong>MSc in Computer Science, (Cum Laude)</strong><br>
+University of Johannesburg</p>
+</blockquote>
+<p><em>2002 - 2002</em></p>
+<blockquote>
+<p><strong>BSc Honours in Computer Science (Cum Laude)</strong><br>
+Rand Afrikaans University</p>
+</blockquote>
+<p><em>1999 - 2001</em></p>
+<blockquote>
+<p><strong>BSc in Information Technology</strong><br>
+Rand Afrikaans University</p>
+</blockquote>
+<hr>
 <h3 id="professional-experience">Professional Experience</h3>
 <p><em>2020 - pres.</em></p>
-<ul>
-<li><code>University of  Johannesburg, Institute for Intelligent Systems</code></li>
-<li><strong>Professor, Nedbank Research Chair</strong></li>
-</ul>
+<blockquote>
+<p><strong>Professor, Nedbank Research Chair</strong><br>
+University of  Johannesburg, Institute for Intelligent Systems</p>
+</blockquote>
 <p><em>2016 - 2020.</em></p>
-<ul>
-<li><code>University of the Witwatersrand, School of Computer Science and Applied Mathematics</code></li>
-<li><strong>Associate Professor</strong></li>
-</ul>
+<blockquote>
+<p><strong>Associate Professor</strong><br>
+University of the Witwatersrand, School of Computer Science and Applied Mathematics</p>
+</blockquote>
 <p><em>2007 - 2015.</em></p>
-<ul>
-<li><code>Council for Scientific and Industrial Research, Meraka</code></li>
-<li><strong>Principal Researcher</strong></li>
-</ul>
+<blockquote>
+<p><strong>Principal Data Scientist</strong><br>
+Council for Scientific and Industrial Research, Meraka</p>
+</blockquote>
 <p><em>2005 - 2007.</em></p>
-<ul>
-<li><code>Altech Netstar</code></li>
-<li><strong>Team Leader/Systems Architect Business Development</strong></li>
-</ul>
+<blockquote>
+<p><strong>Team Leader/Systems Architect Business Development</strong><br>
+Altech Netstar</p>
+</blockquote>
 <p><em>2005 - 2005.</em></p>
-<ul>
-<li><code>Independent Electoral Commission /Motwseni JMR</code></li>
-<li><strong>Contract Senior Business Developer</strong></li>
-</ul>
+<blockquote>
+<p><strong>Contract Senior Business Developer</strong><br>
+Independent Electoral Commission / Motwseni JMR</p>
+</blockquote>
+<hr>
 <h3 id="bio">BIO</h3>
 <p>Terence van Zyl holds the Nedbank Research and Innovation Chair at the University of Johannesburg where he is a Professor in the Institute for Intelligent Systems. He is an NRF rated scientist who received his PhD and MSc in Computer Science from the University of Johannesburg for his thesis on agent-based complex adaptive systems. He has over 15 years of experience researching and innovating large scale streaming analytics systems for government and industry. He has previously served South Africa as a sub-chair within the committee-on earth observation satellites and as part of the South African delegation to the GEO Ministerial. He has received numerous awards including the Meraka Institute innovation excellence award, Council for Scientific and Industrial Research (CSIR) Einstein special award and IEEE committee on earth observation medal for meritorious service. His research interests include data-driven science and engineering, prescriptive analytics, machine learning, meta-heuristic optimisation, complex adaptive systems, high-performance computing, and artificial intelligence.</p>
 </div>
