Adding Downloadable CV

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -192,7 +192,7 @@
 
     ,
         "url" : "https:\/\/tvanzyl.github.io\/about\/",
-        "wordCount" : "301",
+        "wordCount" : "305",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -446,6 +446,7 @@
     <div class="post__content">
       <h1></h1>
       <p>Studied as a Computer Scientist in Artificial Intelligence and Complex Adaptive Systems. Working as a Professor in Machine Learning at the <a href="https://www.uj.ac.za/">University of Johannesburg</a>. Currently, hold the <a href="https://www.nedbank.co.za/">Nedbank</a> research and innovation chair.</p>
+<p><a href="Curriculum_Vitae_for_Terence_van_Zyl.pdf"><code>Download My CV Here</code></a></p>
 <hr>
 <h3 id="education">Education</h3>
 <p><em>2006 - 2010</em></p>
