--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -119,13 +119,13 @@ Institute for Intelligent Systems
 <meta name="twitter:image" content="https://tvanzyl.github.io/images/site-feature-image.png"/>
 
 <meta name="twitter:title" content="Resources"/>
-<meta name="twitter:description" content=" How to clock a research study and article in one go Proposal and dissertation template latex files in a zip Proposal and dissertation template example pdf "/>
+<meta name="twitter:description" content=" How to clock a research study and article in one go Proposal and dissertation template latex files in a ZIP Proposal and dissertation template example PDF "/>
 
 
 
   
   <meta property="og:title" content="Resources" />
-<meta property="og:description" content=" How to clock a research study and article in one go Proposal and dissertation template latex files in a zip Proposal and dissertation template example pdf " />
+<meta property="og:description" content=" How to clock a research study and article in one go Proposal and dissertation template latex files in a ZIP Proposal and dissertation template example PDF " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://tvanzyl.github.io/resources/" /><meta property="og:image" content="https://tvanzyl.github.io/images/site-feature-image.png"/><meta property="article:section" content="" />
 
@@ -147,7 +147,7 @@ Institute for Intelligent Systems
         "alternativeHeadline": "",
         "description": "
       
-         How to clock a research study and article in one go Proposal and dissertation template latex files in a zip Proposal and dissertation template example pdf 
+         How to clock a research study and article in one go Proposal and dissertation template latex files in a ZIP Proposal and dissertation template example PDF 
 
 
       
@@ -461,8 +461,8 @@ Institute for Intelligent Systems
       <h1>Resources</h1>
       <ol>
 <li><a href="How-to-clock-a-research-study-and-article-in-one-go.pdf">How to clock a research study and article in one go</a></li>
-<li><a href="Proposal_Thesis_2.1.zip">Proposal and dissertation template latex files in a zip</a></li>
-<li><a href="main.pdf">Proposal and dissertation template example pdf</a></li>
+<li><a href="Proposal_Thesis_2.1.zip">Proposal and dissertation template latex files in a ZIP</a></li>
+<li><a href="main.pdf">Proposal and dissertation template example PDF</a></li>
 </ol>
 </div>
     <div class="post__footer">
