--- a/public/about/index.html
+++ b/public/about/index.html
@@ -454,7 +454,7 @@
     var adobeDCView = new AdobeDC.View({clientId: "a1dec190a93b4e8ab22111929be6a137", divId: "adobe-dc-view"});
     adobeDCView.previewFile({
       content:{ location:
-        { url: "https://documentservices.adobe.com/view-sdk-demo/PDFs/Bodea%20Brochure.pdf"}},
+        { url: "https://tvanzyl.github.io/about/Curriculum_Vitae_for_Terence_van_Zyl.pdf"}},
       metaData:{fileName: "https://tvanzyl.github.io/about/Curriculum_Vitae_for_Terence_van_Zyl.pdf"}
     },
     {
