--- a/public/about/index.html
+++ b/public/about/index.html
@@ -447,7 +447,7 @@
       <h1></h1>
       <p>Studied as a Computer Scientist in Artificial Intelligence and Complex Adaptive Systems. Working as a Professor in Machine Learning at the <a href="https://www.uj.ac.za/">University of Johannesburg</a>. Currently, hold the <a href="https://www.nedbank.co.za/">Nedbank</a> research and innovation chair.</p>
 <p><a href="Curriculum_Vitae_for_Terence_van_Zyl.pdf"><code>Download My CV Here</code></a></p>
-<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+<!-- <div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
 <script src="https://documentservices.adobe.com/view-sdk/viewer.js"></script>
 <script type="text/javascript">
   document.addEventListener("adobe_dc_view_sdk.ready", function(){
@@ -461,7 +461,7 @@
       embedMode: "SIZED_CONTAINER"
     });
   });
-</script>
+</script> -->
 <hr>
 <h3 id="education">Education</h3>
 <p><em>2006 - 2010</em></p>
