--- a/public/resources/index.html
+++ b/public/resources/index.html
@@ -303,6 +303,18 @@ Institute for Intelligent Systems
           </a>
         </li>
       
+        <li class="sidebar__list-item">
+          <a
+            href="https://calendly.com/tvanzyl/20min"
+            target="_blank"
+            rel="noopener me"
+            aria-label="calendly"
+            title="calendly"
+          >
+            <i class="fas fa-calendar fa-2x" aria-hidden="true"></i>
+          </a>
+        </li>
+      
     </ul>
   </div><footer class="footer footer__sidebar">
   <ul class="footer__list">
