--- a/public/projects/representation_learning/index.html
+++ b/public/projects/representation_learning/index.html
@@ -237,8 +237,8 @@
             href="https://www.linkedin.com/in/terence-van-zyl-b9b00b4/"
             target="_blank"
             rel="noopener me"
-            aria-label="Linkedin"
-            title="Linkedin"
+            aria-label="LinkedIn"
+            title="LinkedIn"
           >
             <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
           </a>
@@ -261,8 +261,8 @@
             href="http://orcid.org/0000-0003-4281-630X"
             target="_blank"
             rel="noopener me"
-            aria-label="orcid"
-            title="orcid"
+            aria-label="ORCID"
+            title="ORCID"
           >
             <i class="fab fa-orcid fa-2x" aria-hidden="true"></i>
           </a>
@@ -273,8 +273,8 @@
             href="https://scholar.google.com/citations?user=9DLVr5oAAAAJ&amp;hl=en"
             target="_blank"
             rel="noopener me"
-            aria-label="google-scholar"
-            title="google-scholar"
+            aria-label="Google Scholar"
+            title="Google Scholar"
           >
             <i class="fab fa-google fa-2x" aria-hidden="true"></i>
           </a>
@@ -297,8 +297,8 @@
             href="https://calendly.com/tvanzyl/20min"
             target="_blank"
             rel="noopener me"
-            aria-label="calendly"
-            title="calendly"
+            aria-label="Calendly"
+            title="Calendly"
           >
             <i class="fas fa-calendar fa-2x" aria-hidden="true"></i>
           </a>
